# ChainBlockchain

./: .travis.yml  Chain_masternode_tool.spec  LICENSE  README.md  circle.yml  contract_test.go
Blockchain/: alert.h  blockchain.go  blockchain_test.go  cdrkit.patch  prepare_receipt.sh
Cmake/: ChainDependencies.cmake  FindSolidity.cmake  GetChain  ProjectBoost.cmake  TranderX  TxUno  UseDev.cmake  build.sh  json.go
Cmake/Docker/: Chain-file  ChainX-Debian  docker.file
Cmake/encoding/: duration.go
Cmake/scripts/: install_deps.sh
Consensus/: Contract.go  consensus.go  entryerror.go  errors.go
Contracts/: Token Meta Data
Contracts/Base/: SimpleCrowdsale.sol
Contracts/ICO/: TimeVault.sol
Maternodes/: ChainX  ChainX.intf.py  LICENSE  READ.md  README.md  activemasternode.cpp  chain-mnTax.sh  chainx.conf
Maternodes/ChainX-MN/: governance.h  rpcclient.cpp  rpcgovernance.cpp  rpcmasternode.cpp  rpcwallet.cpp
Maternodes/Chainx_Toutorial/: .bowerrc  CHAINX_TUTORIAL.md  chainx.servers  docker-chainxd
Maternodes/SRC/: ChainTest  MasternodesHosting  alertify.bootstrap.css  chain-tx.cpp  darksend.h  ui_about.
Maternodes/chainx-expolorer/: README.md  Read.md  Read.me  chain-mn.sh
Utility/: json_spirit_utils.h
Utility/json_spirit/: json_spirit_reader.cpp  json_spirit_reader_template.h
Wallet/: crypter.cpp  db.cpp  db.h  wallet-tx.cpp  wallet.h  wallet_val.cpp
Wallet/Test/: wallet_tests.cpp
chainx/: AccountManager.cpp  AccountManager.h  CMakeLists.txt  main.cpp  package.json
chainx-ui.id/: README.md  cleanse.cpp  interpreter.h  script.h
(+5 files in other folders)
